--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
  ],
     "authors": [
         {
-            "name": "Yashvanth",
-            "email": "nallathimbi@gmail.com"
+            "name": "shashwanth",
+            "email": "perfectlyimperfect7688@gmail.com"
         }
     ],
     "require": {}
